// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultipleFileUploadTitleIcon > renders custom class names 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-multiple-file-upload__title-icon test"
  />
</DocumentFragment>
`;

exports[`MultipleFileUploadTitleIcon > renders with expected class names 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-multiple-file-upload__title-icon"
  />
</DocumentFragment>
`;
